# sbeereck_app

./: .gitignore  README.md  build-release.sh  firestore.indexes.json  firestore.rules  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/org/sbeereck/app/sbeereck_app/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: accounts.dart  home.dart  login.dart  main.dart  model.dart  utils.dart
lib/data/: models.dart  providers.dart
lib/data/model/: account.dart  beer.dart  beers.dart  event_transactions.dart  staff.dart
lib/data/provider/: auth.dart  firestore.dart  theme.dart  up_to_date.dart
lib/data/provider/firestore/: actions.dart  queries.dart
lib/l10n/: app_en.arb  app_fr.arb
lib/view/: account_creation.dart  account_detail.dart  account_detail_recharge_form.dart  account_form.dart  accounts.dart  beer_list.dart  home.dart  login.dart  order_form.dart  staff_list.dart
lib/view/accounts/: account_detail.dart  account_form.dart  accounts.dart
test/: widget_test.dart
tools/migration_tools/: .env.sample  .gitignore  Cargo.toml  rustfmt.toml
tools/migration_tools/src/: main.rs
web/: index.html  manifest.json
